Changes for 3.2.8rc1

New features:
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F....... [ZBX-11607] fixed a rounding of large unsigned numbers (miks)
..F....... [ZBX-12404] fixed visibility of item data first row for 'latest data' page and 'audit log' page (gcalenko)
..F....... [ZBX-12463] fixed undefined index error in "Last 20 issues" (Sasha)
........S. [ZBX-12186] fixed parallel processing of multiple values for same lld rule (vjaceslavs)
..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)
..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)
..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
........S. [ZBX-12295] fixed possible accumulation of executed tasks in database (Sergejs)
........S. [ZBX-12318] fixed maintenance status not being updated in cache if host is disabled (vso)
.......PS. [ZBX-12224] fixed connection to Oracle database when database server gives out warnings (gleb)
...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)

--------------------------------------------------------------------------------
Changes for 3.2.7
