@@ -33,21 +33,6 @@ class CProfile {
 
 		$profilesTableSchema = DB::getSchema('profiles');
 		self::$stringProfileMaxLength = $profilesTableSchema['fields']['value_str']['length'];
-
-		$db_profiles = DBselect(
-			'SELECT p.*'.
-			' FROM profiles p'.
-			' WHERE p.userid='.self::$userDetails['userid'].
-			' ORDER BY p.userid,p.profileid'
-		);
-		while ($profile = DBfetch($db_profiles)) {
-			$value_type = self::getFieldByType($profile['type']);
-
-			if (!isset(self::$profiles[$profile['idx']])) {
-				self::$profiles[$profile['idx']] = [];
-			}
-			self::$profiles[$profile['idx']][$profile['idx2']] = $profile[$value_type];
-		}
 	}
 
 	/**
@@ -88,9 +73,18 @@ class CProfile {
 		self::$update = [];
 	}
 
+	/**
+	 * Return matched idx value for current user.
+	 *
+	 * @param string $idx           Search pattern.
+	 * @param mixed  $default_value Default value if no rows was found.
+	 * @param int    $idx2          Numerical index will be matched against idx2 index.
+	 *
+	 * @return mixed
+	 */
 	public static function get($idx, $default_value = null, $idx2 = 0) {
 		// no user data available, just return the default value
-		if (!CWebUser::$data) {
+		if (!CWebUser::$data || is_null($idx2)) {
 			return $default_value;
 		}
 
@@ -98,12 +92,29 @@ class CProfile {
 			self::init();
 		}
 
-		if (isset(self::$profiles[$idx][$idx2])) {
+		if (!array_key_exists($idx, self::$profiles)) {
+			self::$profiles[$idx] = [];
+		}
+
+		if (array_key_exists($idx2, self::$profiles[$idx])) {
 			return self::$profiles[$idx][$idx2];
 		}
-		else {
-			return $default_value;
+
+		// Aggressive caching, cache all items matched $idx key.
+		$query = DBselect(
+			'SELECT type, value_id, value_int, value_str, idx2'.
+			' FROM profiles'.
+			' WHERE userid='.zbx_dbstr(self::$userDetails['userid']).
+				' AND idx='.zbx_dbstr($idx)
+		);
+
+		while ($row = DBfetch($query)) {
+			$value_type = self::getFieldByType($row['type']);
+
+			self::$profiles[$idx][$row['idx2']] = $row[$value_type];
 		}
+
+		return array_key_exists($idx2, self::$profiles[$idx]) ? self::$profiles[$idx][$idx2] : $default_value;
 	}
 
 	/**
@@ -119,15 +130,7 @@ class CProfile {
 			return $defaultValue;
 		}
 
-		$i = 0;
-		$values = [];
-		while (self::get($idx, null, $i) !== null) {
-			$values[] = self::get($idx, null, $i);
-
-			$i++;
-		}
-
-		return $values;
+		return self::$profiles[$idx];
 	}
 
 	/**
@@ -141,31 +144,13 @@ class CProfile {
 			self::init();
 		}
 
-		if (!isset(self::$profiles[$idx])) {
-			return;
-		}
+		$idx2 = is_array($idx2) ? $idx2 : [$idx2];
+		self::deleteValues($idx, $idx2);
 
-		// pick existing Idx2
-		$deleteIdx2 = [];
-		foreach ((array) $idx2 as $checkIdx2) {
-			if (isset(self::$profiles[$idx][$checkIdx2])) {
-				$deleteIdx2[] = $checkIdx2;
+		if (array_key_exists($idx, self::$profiles)) {
+			foreach ($idx2 as $index) {
+				unset(self::$profiles[$idx][$index]);
 			}
-		}
-
-		if (!$deleteIdx2) {
-			return;
-		}
-
-		// remove from DB
-		self::deleteValues($idx, $deleteIdx2);
-
-		// remove from cache
-		foreach ($deleteIdx2 as $v) {
-			unset(self::$profiles[$idx][$v]);
-		}
-		if (!self::$profiles[$idx]) {
-			unset(self::$profiles[$idx]);
 		}
 	}
 
@@ -179,11 +164,7 @@ class CProfile {
 			self::init();
 		}
 
-		if (!isset(self::$profiles[$idx])) {
-			return;
-		}
-
-		self::deleteValues($idx, array_keys(self::$profiles[$idx]));
+		DB::delete('profiles', ['idx' => $idx, 'userid' => self::$userDetails['userid']]);
 		unset(self::$profiles[$idx]);
 	}
 
@@ -271,7 +252,9 @@ class CProfile {
 			$i++;
 		}
 
-		self::delete($idx, $idx2);
+		if ($idx2) {
+			self::delete($idx, $idx2);
+		}
 	}
 
 	private static function insertDB($idx, $value, $type, $idx2) {
