@@ -4,6 +4,7 @@ New features:
 ........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)
 
 Bug fixes:
+..F....... [ZBX-12416] optimized data selection of user preferences stored in profiles (gcalenko)
 ..F....... [ZBX-11607] fixed a rounding of large unsigned numbers (miks)
 ..F....... [ZBX-12404] fixed visibility of item data first row for 'latest data' page and 'audit log' page (gcalenko)
 ..F....... [ZBX-12463] fixed undefined index error in "Last 20 issues" (Sasha)
